--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
+    "react-datepicker": "^4.21.0",
     "react-dom": "18.2.0",
     "use-immer": "^0.9.0"
   },
